samples/_failures_safe/1761334803_1ca4ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae05f288.c: In function ‘main’:
./samples/SAFE/__tmp_ae05f288.c:143:9: error: expected declaration or statement at end of input
  143 |         printf("\nAvailable operations:\n");
      |         ^~~~~~
./samples/SAFE/__tmp_ae05f288.c:143:9: error: expected declaration or statement at end of input
